--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# Created by .ignore support plugin (hsz.mobi)
+
+### Java template
+*.class
+
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea
+
+## File-based project format:
+*.iws
 *.iml
-/.idea/
